--- a/style.css
+++ b/style.css
@@ -1280,6 +1280,7 @@ footer li {
 /*  - - HEADER- - **/
 
     .header_bloc {
+        width: 100%;
         flex-wrap: wrap;   
         margin-bottom: 0px;
         padding-bottom: 0px;
@@ -1405,11 +1406,12 @@ footer li {
         margin: 0px;
     }
     .Accomodation_card {
-        width: 330px; 
+        width: 100px;
 
     }
     .accomodation_images {  
-        height: 120px;
+        width: 100%;
+        height: 50%;
     }
     .accomodation h4 {margin-left: 0px;}
     
@@ -1421,10 +1423,7 @@ footer li {
         padding-bottom: 20px;
     }
     .most_popular_card { 
-        width: 330px; 
-        margin: 20px 0px 20px 0px;
-        padding-left: -10px;
-        
+        width: 100px;
     }
 
     .most_popular_images {
@@ -1443,6 +1442,9 @@ footer li {
     }
 
      /*  - -ACTIVITIES SECTION- - **/
+    .activities {
+        width: 100%;
+    }
 
     .activities_h2 {
         font-size: large;
@@ -1458,42 +1460,37 @@ footer li {
     .activities_alone{
         margin: 0px;
         padding: 0px;
-        width: 340px;
+        width: 100%
     }
 
     .activities_double {
         margin: 0px;
         padding: 0px;
-        width: 340px;
+        width: 100%
     }
 
     .activities_card1{
-        width: 340px;
+       width: 100px;
     }
 
     .activities_card2{  
-        width: 340px;
-        margin: 20px 0px 20px 10px;
+        width: 100px;
     }
 
     .activities_card3{
-        width: 340px; 
-        margin: 20px 0px 20px 10px;
+        width: 100px;
     }
 
     .activities_card4{
-        width: 340px;
-        margin: 20px 0px 20px 10px;
+        width: 100px;
     }
 
     .activities_card5{
-        width: 340px;
-        margin: 20px 0px 20px 10px;
+        width: 100px;
     }
 
     .activities_card6{
-        width: 340px; 
-        margin: 20px 0px 20px 10px;
+        width: 100px;
     }
 
      /*  - -FOOTER SECTION- - **/
