Correction post soutenance :
- Dimension des images de la catégorie populaires  
- Suppression des images inutilisées (X/L/M)

--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ main {
 }
 
 .most_popular_images {
-    width: 100%;   
+    width: 130px;   
     height: 130px;
     object-fit: cover;
     border-top-left-radius: 15%;
