--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ main {
 
 .most_popular_images {
     width: 160px;   
-    height: 130px;
+    height: 100%;
     object-fit: cover;
     border-top-left-radius: 15%;
     border-bottom-left-radius: 15%;
